<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminAlumnoActualizarActivity">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:stretchColumns="1"
        >
        <TableRow android:layout_marginTop="30dp">
            <TextView android:text="@string/carnet" />
            <EditText
                android:id="@+id/editcarnet"
                android:inputType="text"
                android:maxLength="30"
                android:enabled="false"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/nomdoceingreso" />
            <EditText
                android:id="@+id/editNombreA"
                android:inputType="text"
                android:maxLength="30" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/apedoceingreso" />
            <EditText
                android:id="@+id/editApellidoA"
                android:inputType="text"
                android:maxLength="30" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/contradoce" />
            <EditText
                android:id="@+id/editContraseñaA"
                android:inputType="text"
                android:maxLength="30" />
        </TableRow>
    </TableLayout>


    <Button
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="130dp"
        android:onClick="editalumno"
        android:textColor="@color/colorPrincipalOscuro"
        android:textStyle="bold"
        android:text="@string/guardar" />



</LinearLayout>