<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".AdminLocalNuevoActivity">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:stretchColumns="1">

            <TableRow android:layout_marginTop="30dp">

                <TextView android:text="@string/local" />

                <EditText
                    android:id="@+id/newLocal"
                    android:inputType="text"
                    android:maxLength="7" />
            </TableRow>

            <TableRow>

                <TextView android:text="@string/capacidad" />

                <EditText
                    android:id="@+id/newCapaciLocal"
                    android:inputType="text"
                    android:maxLength="30" />
            </TableRow>
            <TableRow>
    <TextView android:text="@string/tipo" />

        <Spinner
            android:id="@+id/spinerLocalTipo"
            android:layout_width="match_parent"
            android:layout_height="50dp">


        </Spinner> </TableRow>
</TableLayout>

        <Button
            android:layout_marginTop="30dp"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_marginStart="130dp"
            android:onClick="guardarLocal"
            android:textColor="@color/colorPrincipal"
            android:textStyle="bold"
            android:text="@string/guardar" />

    </LinearLayout>