<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ajla.app_asistencia.Admin_Asig_GL">

    <TextView
        android:id="@+id/textViewGL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GL"
        tools:layout_editor_absoluteX="24dp"
        tools:layout_editor_absoluteY="31dp" />

    <Spinner
        android:id="@+id/spinnerGL"
        android:layout_width="141dp"
        android:layout_height="40dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="75dp" />

    <TextView
        android:id="@+id/textViewDocenteGL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DocenteGL"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="246dp" />

    <Spinner
        android:id="@+id/spinnerDocenteGL"
        android:layout_width="142dp"
        android:layout_height="39dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="181dp" />

    <TextView
        android:id="@+id/textViewLocalGL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/localGL"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="132dp" />

    <Spinner
        android:id="@+id/spinnerLocalGL"
        android:layout_width="143dp"
        android:layout_height="43dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="284dp" />

    <Button
        android:onClick="onGL"
        android:id="@+id/btnGuardarGL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GuardarGL"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="373dp" />
</LinearLayout>
