<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminAsignarMaterias">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adminasignacion"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/negro"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp">
    <TextView


        android:text="@string/materias"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:textStyle="bold"
        android:textSize="13sp"
        android:textColor="@color/negro" />


    <Spinner
        android:id="@+id/spinermaterias"
        android:layout_width="match_parent"
        android:layout_height="50dp">
    </Spinner>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp">
    <TextView


        android:text="@string/Coordinador"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:textStyle="bold"
        android:textSize="13sp"
        android:textColor="@color/negro" />


    <Spinner
        android:id="@+id/spinercoordinador"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="coordinadores"

        >


    </Spinner>

    </RelativeLayout>

    <Button
        android:id="@+id/botonguardaradmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="agregarasig"
        android:layout_marginStart="135dp"
        android:text="@string/botonguardar"/>




</LinearLayout>
