<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminAlumnoNuevoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="30dp"
        android:text="@string/msjingresoalumno"
        android:textColor="@color/negro"
        android:textSize="25sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:text="@string/carnet"
            android:textColor="@color/negro"
            android:textSize="13sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/carnetnuevo"
            android:layout_width="270dp"
            android:layout_height="34dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@color/fondo"
            android:hint="Ej.546789091" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:text="@string/nomdoceingreso"
            android:textColor="@color/negro"
            android:textSize="13sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/nomalumnnuevo"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@color/fondo"
            android:hint="Ej.Eduardo José" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:text="@string/apedoceingreso"
            android:textColor="@color/negro"
            android:textSize="13sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/apealumnuevo"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@color/fondo"
            android:hint="Recinos Galdamez" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:text="@string/contradoce"
            android:textColor="@color/negro"
            android:textSize="13sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/contraalumnuevo"
            android:layout_width="270dp"
            android:layout_height="34dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@color/fondo"
            android:hint="Ej.XXXXXXXXX" />



    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4sp"
            android:layout_marginStart="150dp"
            android:text="@string/guardar"
            android:onClick="guardarAl"/>
    </LinearLayout>

</LinearLayout>